<resources>
    <string name="app_name">Canteen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_hint">Log In </string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="admin_code">Admin code:</string>
    <string name="register_text">Register</string>
    <string name="create_new_account">Create new account!</string>
</resources>
