<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.RegisterFragment"
    android:background="@drawable/login_wallpaper">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="161dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColor="@color/colorTextComplementary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="161dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColor="@color/colorTextComplementary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="161dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:textColor="@color/colorTextComplementary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayout4"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="161dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_admin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_code"
            android:textColor="@color/colorTextComplementary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="284dp"
        android:text="@string/register_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>