<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_wallpaper">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="167dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:maxLines="1"
            android:textColor="@color/colorTextComplementary"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="21dp"
        android:background="@color/colorComplementary"
        android:textColorHint="@color/colorTextComplementary"
        app:layout_constraintBottom_toTopOf="@+id/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:textColor="@color/colorTextComplementary"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--<pl.droidsonroids.gif.GifImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:src="@drawable/login"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="302dp"
        android:background="@color/colorWhite"
        android:text="@string/login_text_hint"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_new_account" />

    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_new_account"
        android:textColor="@color/colorRegisterTextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>